# dataQuest-project

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yml  fly.toml  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 4e6342c11a19_create_series_and_observations.py  b1c2d3e4f5a6_index_lab_tables.py  b2c3d4e5f6a7_add_downloadable_to_series.py  c3d4e5f6a7b8_add_unit_to_series.py  cbe7eea462c6_pit_index_unique.py  e1f2a3b4c5d6_add_qdf_ticker.py  f7a8b9c0d1e2_dataproduct_grouping.py
backend/app/api/: __init__.py  downsample.py  main.py  queries.py  revision_stats.py
backend/app/api/routes/: __init__.py  catalog.py  datasets.py  dcat.py  indices.py  observations.py  products.py  qdf.py  series.py
backend/app/core/: __init__.py  config.py  db.py  errors.py  logging.py  ratelimit.py  readcache.py
backend/app/ingest/: __init__.py  errors.py  index_build.py  index_engine.py  load.py  registry.py  run.py  standard.py
backend/app/ingest/sources/: __init__.py  alfred.py  base.py  ecb.py  fiscaldata.py  phillyfed.py  worldbank.py
backend/scripts/: verify_index_engine.py  verify_parity.py  verify_qdf.py
docs/architecture/: build_architecture_diagram.py  dataquest-backend.excalidraw  rare-mcp.excalidraw
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: dashboard.spec.ts
(+90 files in other folders)
